# weblog

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
crawler-desktop/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crawler-worker/: README.md  pyproject.toml
crawler-worker/app/: db.py  main.py  models.py  schemas.py
crawler-worker/app/api/routes/: settings.py  site_profiles.py  tasks.py
crawler-worker/app/core/: config.py
crawler-worker/app/services/: assets.py  browser_pool.py  diagnostics.py  extractor.py  push_client.py  push_target.py  scheduler.py  url_normalizer.py  url_policy.py
crawler-worker/tests/: test_assets.py  test_browser_pool.py  test_datetime_normalization.py  test_e2e_acceptance.py  test_incremental_batch_capture.py  test_main_polling.py  test_push_client.py  test_push_target.py  test_site_profiles.py  test_url_policy.py
database/: weblog.sql
deploy/: deploy.sh  generate-secrets.sh  preflight-check.sh  ssl-init.sh  ssl-renew.sh  weblog-api.service
docs/: deployment-guide.md  development-experience-guide.md  full-stack-development-guide.md  p0-api-regression.ps1  safe-production-release-guide.md  security-performance-optimization-todo.md  security-regression-cases.md  上线前安全核验清单-2026-03-29.md  攻击者视角漏洞审计与修复方案-2026-03-29.md
nginx/: nginx.conf
scripts/: captcha-attack-regression.ps1  captcha-attack-report-template.json  check-build-warnings.mjs  (+5 more)
(+825 files in other folders)
