[project]
name = "crawler-worker"
version = "0.1.0"
description = "Local crawler worker for weblog draft ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "aiosqlite>=0.20.0",
  "apscheduler>=3.10.4",
  "httpx>=0.27.2",
  "beautifulsoup4>=4.12.3",
  "trafilatura>=1.9.0",
  "playwright>=1.47.0",
  "pydantic-settings>=2.5.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0"
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 17891

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "tests*"]
